adicionado autenticação JWT e novo service para atualizar os usuários já com senha criptografada
