# src/controllers/userController.js
@@ -35,17 +35,18 @@ exports.getUserById = (req, res) => {
 };
 
 exports.updateUser = (req, res) => {
-    User.findByIdAndUpdate(req.params.id, req.body, { new: true })
-        .then(user => {
-            if (!user) {
-                return res.status(404).json({ error: "Usuário não encontrado" });
-            }
-            res.json(user);
+    const { id } = req.params;
+    const { name, email, password } = req.body;
+    
+    userService
+        .updateUser(id, { name, email, password })
+        .then(updatedUser => {
+            res.status(200).json({ message: 'Usuário atualizado com sucesso: ', user: updatedUser });
         })
         .catch(error => {
-            console.error('Erro ao atualizar o usuário:', error);
-            res.status(500).json({ error: "Erro ao atualizar o usuário" });
-        });
+            console.error('Erro ao atualizar o usuário: ', error);
+            res.status(400).json({ error: error.message });
+        })
 }
 
 exports.deleteUser = (req, res) => {
